# ATS-ToolKit

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  arborescence_creation.py  docker-compose.yml  install.bat  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  test_registry.py  toolkit.py
ATS-UI/: __init__.py
config/: modules.yaml
core/: __init__.py  cache_manager.py  consent_manager.py  exceptions.py  module_registry.py  pipeline_engine.py  utils.py
data/: .cache_key
docker/: .dockerignore  Dockerfile  docker-compose.yml
legal/: __init__.py  disclaimer.py
migrations/: env.py
migrations/versions/: 20240101_0000_001_initial_schema.py
osint/: __init__.py
osint/core/: __init__.py
osint/modules/: __init__.py  dns_enum.py  ip_geolocate.py  subdomain_enum.py  whois_lookup.py
pentest/: __init__.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  deps.py  main.py
src/api/v1/: __init__.py  auth.py  health.py  users.py
src/core/: __init__.py  base_module.py  config_manager.py  database.py  error_handler.py  exceptions.py  logger.py  logging.py  security.py
src/models/: __init__.py  api_key.py  audit.py  user.py
src/modules/: registry.py
src/modules/advanced/: __init__.py  ai_bias_scanner.py  ai_data_poisoning_detector.py  ai_deepfake_detector.py  ai_llm_scanner.py  ai_model_evasion.py  ai_prompt_injection.py  attack_surface_mapper.py  bluetooth_scanner.py  cloud_compliance_audit.py  cloud_container_scanner.py  cloud_cost_attack.py  cloud_iam_analyzer.py  cloud_metadata_exploit.py  cloud_network_mapper.py  cloud_s3_scanner.py  cloud_secrets_scanner.py  cloud_serverless_audit.py  cloud_storage_enum.py  config_hardening.py  crypto_cipher_detector.py  crypto_encoding_detector.py  crypto_hash_cracker.py  crypto_key_analyzer.py  crypto_steganography.py  crypto_tls_audit.py  evidence_packager.py  ics_config_auditor.py  ics_firmware_analyzer.py  ics_modbus_client.py  ics_network_mapper.py  ics_plc_fingerprint.py  ics_protocol_scanner.py  ics_traffic_analyzer.py  ics_vulnerability_check.py  incident_responder.py  mobile_api_scanner.py  mobile_apk_analyzer.py  mobile_privacy_audit.py  mobile_ssl_pinning_check.py  (+34 more)
src/modules/continuous_pentest/: __init__.py  compliance_checker.py  drift_detector.py  scheduled_scanner.py
src/modules/deception/: __init__.py  deception_monitor.py  decoy_file_creator.py  honey_token_generator.py  honeypot_deployer.py  network_decoy.py
src/modules/forensics/: __init__.py  file_carver.py  hash_analyzer.py  log_analyzer.py  memory_strings.py  metadata_forensics.py  network_forensics.py  registry_analyzer.py  timeline_builder.py
src/modules/fuzzing/: __init__.py  api_endpoint_fuzzer.py  file_format_fuzzer.py  http_fuzzer.py  input_mutation.py  parameter_bruteforce.py  protocol_fuzzer.py
src/modules/malware/: __init__.py  ioc_extractor.py  sandbox_analyzer.py  static_analyzer.py  yara_scanner.py
src/modules/ml_detection/: __init__.py  anomaly_detector.py  behavior_analyzer.py  payload_detector.py  threat_classifier.py  traffic_analyzer.py
src/modules/osint/: __init__.py  breach_check.py  certificate_search.py  dark_web_monitor.py  dns_records.py  domain_recon.py  email_hunter.py  google_dorks.py  ip_geolocation.py  metadata_extractor.py  shodan_search.py  social_analyzer.py  subdomain_enum.py  tech_detector.py  username_enum.py  wayback_machine.py  whois_lookup.py
src/modules/pentest/: __init__.py  api_fuzzer.py  cms_scanner.py  cors_tester.py  csrf_tester.py  directory_fuzzer.py  header_security.py  jwt_analyzer.py  lfi_rfi_scanner.py  nuclei_wrapper.py  port_scanner.py  sensitive_data_scanner.py  sql_injection_scanner.py  ssl_tls_scanner.py  ssrf_scanner.py  subdomain_takeover.py  xss_scanner.py  xxe_tester.py
src/modules/red_team/: __init__.py  ad_enumerator.py  c2_beacon_detector.py  credential_harvester.py  lateral_movement.py  network_pivoting.py  password_spray.py  payload_generator.py  persistence_detector.py  phishing_campaign.py  privilege_escalation_check.py
src/schemas/: __init__.py  auth.py  common.py  user.py
src/services/: __init__.py  auth.py  user.py
src/streamlit_ui/: __init__.py  app.py
src/tui/: __init__.py  app.py
src/webui/: __init__.py
tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_users.py
tests/unit/: __init__.py  test_api.py  test_core.py
