[project]
name = "osint-platform"
version = "0.1.0"
description = "Enterprise OSINT Platform - Data Collection, Analysis, and Visualization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "ATSEN Team" }
]
keywords = ["osint", "intelligence", "security", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "greenlet>=3.0.0",

    # Redis
    "redis>=5.0.1",

    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",

    # HTTP Client
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # Logging
    "structlog>=24.1.0",

    # Utilities
    "orjson>=3.9.0",
    "python-dateutil>=2.8.2",
    "email-validator>=2.1.0",

    # Web UI
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "pandas>=2.2.0",

    # Launcher
    "rich>=13.7.0",
    "typer>=0.9.0",
    "inquirer>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

collectors = [
    # DNS & Network
    "dnspython>=2.4.0",
    "python-whois>=0.9.0",

    # Web Scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",

    # APIs
    "shodan>=1.31.0",
]

ml = [
    "spacy>=3.7.0",
    "sentence-transformers>=2.3.0",
    "scikit-learn>=1.4.0",
    "hdbscan>=0.8.33",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.scripts]
osint = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "jose.*",
    "redis.*",
]
ignore_missing_imports = true
